# agentbreeder

./: .cspell.json  .dockerignore  .env.example  .gcloudignore  .gitignore  .gitleaks.toml  404.html  AGENT.md  ARCHITECTURE.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cli  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TRADEMARK.md  _config.yml  alembic.ini  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/commands/: agent-build.md  launch.md  tests.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-website.yml  docs-check.yml  docs.yml  eval-on-pr.yml  integration-tests.yml  release.yml  security.yml  stale.yml
.playwright-mcp/: page-2026-04-15T01-34-58-281Z.yml  page-2026-04-15T01-49-04-413Z.yml  page-2026-04-15T02-35-48-061Z.yml
ANALYSIS/: index.html
Formula/: agentbreeder.rb
GITHUB_ISSUES/: index.html
GTM_STRATEGY/: index.html
MARKET_RESEARCH/: index.html
OSS_VC_PLAYBOOK/: index.html
OVERVIEW/: index.html
PITCH_DECK/: index.html
agent-yaml/: index.html
agentbreeder-cloud/: README.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_users_table.py  003_add_model_enhanced_fields.py  003_add_providers_table.py  004_add_providers_table.py  005_add_prompt_versions_table.py  010_merge_migration_heads.py  012_add_litellm_key_refs.py  014_add_created_by_to_assets.py  018_add_model_lifecycle_fields.py  019_agent_versions.py  020_incidents_table.py  021_compliance_scans_table.py
api/: auth.py  config.py  main.py  versioning.py
api-stability/: index.html
api/middleware/: rbac.py
api/models/: audit.py  audit_schemas.py  cost_schemas.py  costs.py  database.py  enums.py  schemas.py  team_schemas.py  teams.py  tracing.py  tracing_schemas.py
api/routes/: a2a.py  agentops.py  agents.py  approvals.py  audit.py  auth.py  builders.py  compliance.py  costs.py  deploys.py  evals.py  gateway.py  git.py  mcp_servers.py  memory.py  models.py  orchestrations.py  playground.py  prompts.py  providers.py  rag.py  rbac.py  registry.py  sandbox.py  secrets.py  teams.py  tracing.py
api/services/: agentops_service.py  audit_service.py  auth.py  cost_service.py  deploy_service.py  eval_service.py  git_service.py  graph_extraction.py  graph_store.py  litellm_key_service.py  neo4j_rag_backend.py  orchestration_service.py  rag_service.py  rbac_service.py  sandbox_service.py  team_service.py  tracing_service.py
api/tasks/: models_sync_cron.py
benchmarks/: benchmark_core.py
cli/: main.py
cli-reference/: index.html
cli/commands/: chat.py  compliance.py  deploy.py  describe.py  down.py  eject.py  eval.py  init_cmd.py  list_cmd.py  logs.py  model.py  orchestration.py  provider.py  publish.py  quickstart.py  review.py  scan.py  search.py  secret.py  seed.py  setup.py  status.py  submit.py  teardown.py  ui.py  up.py  validate.py
connectors/: base.py
connectors/datadog/: README.md  __init__.py  connector.py  dashboard.json
connectors/email/: __init__.py  smtp.py
connectors/grafana/: README.md  __init__.py  connector.py  dashboard.json
connectors/litellm/: connector.py
connectors/mcp_scanner/: scanner.py
connectors/news/: __init__.py  arxiv.py  base.py  hackernews.py  rss.py
connectors/openrouter/: connector.py
content/linkedin-article-agent-revenue-stack/: index.html
content/linkedin-post-agentbreeder-launch/: index.html
dashboard/: Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json  playwright.config.ts  playwright.docker.config.ts
dashboard/src/: App.tsx
deploy/: docker-compose.e2e.yml  docker-compose.override.yml  docker-compose.quickstart.yml  docker-compose.standalone.yml  docker-compose.yml  litellm_config.quickstart.yaml  litellm_config.yaml
deploy/postgres-init/: 01-create-databases.sql
deploy/seed/: seed.py
docs/: ANALYSIS.md  ARCHITECTURE.md  CNAME  DESIGN.md  GITHUB_ISSUES.md  GTM_STRATEGY.md  MARKET_RESEARCH.md  OSS_VC_PLAYBOOK.md  OVERVIEW.md  PITCH.md  PITCH_DECK.md  ROADMAP.md  agent-yaml.md  api-stability.md  cli-reference.md  cloud-integration-plan.md  how-to.md  index.md  local-development.md  orchestration-sdk.md  orchestration-yaml.md  quickstart.md  registry-guide.md  security.md
docs/architecture/: agentops-lifecycle.md  eval-tracing-platform.md  mcp-platform.md  memory-platform.md  platform-v2.md  rag-platform.md
docs/content/: linkedin-article-agent-revenue-stack.md  linkedin-post-agentbreeder-launch.md
docs/migrations/: FROM_AUTOGEN.md  FROM_CREWAI.md  FROM_CUSTOM.md  FROM_LANGGRAPH.md  FROM_OPENAI_AGENTS.md  OVERVIEW.md
docs/overrides/: main.html
docs/skills/: model-e2e-test.md
engine/: builder.py  config_parser.py  governance.py  orchestration_parser.py  orchestrator.py  prompt_runner.py  resolver.py  tool_bridge.py
engine/a2a/: auth.py
engine/compliance/: __init__.py  controls.py  scanner.py
engine/deployers/: __init__.py  aws_app_runner.py  aws_ecs.py  azure_container_apps.py  base.py  claude_managed.py  (+5 more)
homebrew/: README.md
how-to/: index.html
local-development/: index.html
microlearning-ebook-agent/: .antigravity.md  .cursorrules  .env.example  .gcloudignore  AGENTS.md  ARCHITECT_NOTES.md  CLAUDE.md  Dockerfile  Dockerfile.cloudrun  README.md  agent.py  agent.yaml  docker-compose.yml  pyproject.toml  requirements.txt
orchestration-sdk/: index.html
orchestration-yaml/: index.html
quickstart/: index.html
registry/: agents.py  deploys.py  mcp_servers.py  model_lifecycle.py  models.py  prompts.py  providers.py  rag.py  tools.py
registry-guide/: index.html
scripts/: create_github_issues.py  setup-branch-protection.sh
sdk/python/: README.md  pyproject.toml
sdk/python/agenthub/: __init__.py  agent.py  deploy.py  mcp.py  memory.py  model.py  orchestration.py  tool.py  validation.py  yaml_utils.py
search/: search_index.json
sidecar/: .gitignore  Dockerfile  README.md  go.mod
templates/: registry.json
website/: eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+650 files in other folders)
