[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbreeder-sdk"
version = "0.1.0"
description = "AgentBreeder Python SDK — define, validate, and deploy AI agents programmatically."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "AgentBreeder Contributors" }]
keywords = ["ai", "agents", "sdk", "agentbreeder"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://github.com/open-agent-garden/agentbreeder"
Repository = "https://github.com/open-agent-garden/agentbreeder"
Documentation = "https://open-agent-garden.github.io/agentbreeder"

[tool.hatch.build.targets.wheel]
packages = ["agenthub"]
