[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "agentbreeder-sdk"
dynamic = ["version"]
description = "AgentBreeder Python SDK — define, validate, and deploy AI agents programmatically."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "AgentBreeder Contributors" }]
keywords = ["ai", "agents", "sdk", "agentbreeder"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://agent-breeder.com"
Repository = "https://github.com/rajitsaha/agentbreeder"
Documentation = "https://agent-breeder.com"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["agenthub"]
